Created user schema

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGO_URL = 'mongodb+srv://vinaypathrikar2328:TiLGLTOrXZ9MQ4r2@shey-healthy.mtds3.mongodb.net/sheyhealthy-udemy'
+JWT_SECRET = 'SHEYHEALTHY'
