--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,15 @@
   "private": true,
   "dependencies": {
     "antd": "^5.22.4",
+    "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^7.0.2",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "redux": "^5.0.1",
+    "redux-toolkit": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -33,5 +37,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
