--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "antd": "^5.22.4",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "http-proxy-middleware": "^3.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.4.1",
